--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Group\GroupMemberStatus.cs" />
     <Compile Include="Group\MeetsGroupRequirement.cs" />
     <Compile Include="Group\ParticipationType.cs" />
+    <Compile Include="Group\RelationshipStrength.cs" />
     <Compile Include="Group\RelationshipTrend.cs" />
     <Compile Include="Group\RequirementCheckType.cs" />
     <Compile Include="Group\ScheduleConfirmationLogic.cs" />
