--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1621,6 +1621,7 @@
     <Compile Include="Plugin\HotFixes\206_MigrationRollupsForV17_0_13.cs" />
     <Compile Include="Plugin\HotFixes\205_MigrationRollupsForV17_0_12.cs" />
     <Compile Include="Plugin\HotFixes\219_UndoObsidianChop.cs" />
+    <Compile Include="Plugin\HotFixes\223_ClassAttendancePage.cs" />
     <Compile Include="Plugin\HotFixes\222_LMSSecurity.cs" />
     <Compile Include="Plugin\HotFixes\220_CompletionGradingSystem.cs" />
     <Compile Include="Plugin\HotFixes\218_MigrationRollupsForV17_0_19.cs" />
