+ (Core) Updated an index on the AnalyticsSourceFinancialTransaction table to increase query performance for certain queries.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\202411211742013_AddAdaptiveMessageCategory.Designer.cs">
       <DependentUpon>202411211742013_AddAdaptiveMessageCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412050843482_UpdateAnalyticsFinancialTransaction.cs" />
+    <Compile Include="Migrations\202412050843482_UpdateAnalyticsFinancialTransaction.Designer.cs">
+      <DependentUpon>202412050843482_UpdateAnalyticsFinancialTransaction.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2340,6 +2344,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202411211742013_AddAdaptiveMessageCategory.resx">
       <DependentUpon>202411211742013_AddAdaptiveMessageCategory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412050843482_UpdateAnalyticsFinancialTransaction.resx">
+      <DependentUpon>202412050843482_UpdateAnalyticsFinancialTransaction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
