--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\202412052331428_CodeGenerated_20241205.designer.cs">
       <DependentUpon>202412052331428_CodeGenerated_20241205.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412111235268_RemoveGroupTypeLocationTypeIndexes.cs" />
+    <Compile Include="Migrations\202412111235268_RemoveGroupTypeLocationTypeIndexes.Designer.cs">
+      <DependentUpon>202412111235268_RemoveGroupTypeLocationTypeIndexes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2361,6 +2365,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202412052331428_CodeGenerated_20241205.resx">
       <DependentUpon>202412052331428_CodeGenerated_20241205.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412111235268_RemoveGroupTypeLocationTypeIndexes.resx">
+      <DependentUpon>202412111235268_RemoveGroupTypeLocationTypeIndexes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
