--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\202412111235268_RemoveGroupTypeLocationTypeIndexes.Designer.cs">
       <DependentUpon>202412111235268_RemoveGroupTypeLocationTypeIndexes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412112056360_AddRestViewSupport.cs" />
+    <Compile Include="Migrations\202412112056360_AddRestViewSupport.Designer.cs">
+      <DependentUpon>202412112056360_AddRestViewSupport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2368,6 +2372,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202412111235268_RemoveGroupTypeLocationTypeIndexes.resx">
       <DependentUpon>202412111235268_RemoveGroupTypeLocationTypeIndexes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412112056360_AddRestViewSupport.resx">
+      <DependentUpon>202412112056360_AddRestViewSupport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
