- (Group) Implemented kickback improvements for Peer Network feature.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1636,6 +1636,7 @@
     <Compile Include="Plugin\HotFixes\214_UpdateGradingScaleDescriptions.cs" />
     <Compile Include="Plugin\HotFixes\221_PeerNetworkPageAndBlocks.cs" />
     <Compile Include="Plugin\HotFixes\225_ImprovePeerNetworkCalculations.cs" />
+    <Compile Include="Plugin\HotFixes\229_PeerNetworkFitNFinish.cs" />
     <Compile Include="Plugin\HotFixes\HotFixMigrationResource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
