--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -92,6 +92,14 @@
     <Compile Include="Migrations\202412172356239_LearningHubImage.Designer.cs">
       <DependentUpon>202412172356239_LearningHubImage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412181755297_Rollup_20241218.cs" />
+    <Compile Include="Migrations\202412181755297_Rollup_20241218.designer.cs">
+      <DependentUpon>202412181755297_Rollup_20241218.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202412182043229_CodeGenerated_20241218.cs" />
+    <Compile Include="Migrations\202412182043229_CodeGenerated_20241218.designer.cs">
+      <DependentUpon>202412182043229_CodeGenerated_20241218.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2382,6 +2390,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202412172356239_LearningHubImage.resx">
       <DependentUpon>202412172356239_LearningHubImage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412181755297_Rollup_20241218.resx">
+      <DependentUpon>202412181755297_Rollup_20241218.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412182043229_CodeGenerated_20241218.resx">
+      <DependentUpon>202412182043229_CodeGenerated_20241218.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
