--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -100,6 +100,10 @@
     <Compile Include="Migrations\202412182043229_CodeGenerated_20241218.designer.cs">
       <DependentUpon>202412182043229_CodeGenerated_20241218.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.cs" />
+    <Compile Include="Migrations\202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.Designer.cs">
+      <DependentUpon>202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2396,6 +2400,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202412182043229_CodeGenerated_20241218.resx">
       <DependentUpon>202412182043229_CodeGenerated_20241218.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.resx">
+      <DependentUpon>202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
