--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -104,6 +104,10 @@
     <Compile Include="Migrations\202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.Designer.cs">
       <DependentUpon>202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202412221138199_AddStartAndEndDateToAdaptiveModule.cs" />
+    <Compile Include="Migrations\202412221138199_AddStartAndEndDateToAdaptiveModule.Designer.cs">
+      <DependentUpon>202412221138199_AddStartAndEndDateToAdaptiveModule.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2403,6 +2407,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.resx">
       <DependentUpon>202412191302059_CommunicationRecipient_FirstSendAttemptDateTime.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202412221138199_AddStartAndEndDateToAdaptiveModule.resx">
+      <DependentUpon>202412221138199_AddStartAndEndDateToAdaptiveModule.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
