--- a/Rock.Rest/Rock.Rest.csproj
+++ b/Rock.Rest/Rock.Rest.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Swagger\RockV2OperationFilter.cs" />
     <Compile Include="Swagger\RockV2SchemaFilter.cs" />
     <Compile Include="Swagger\RockV2SwaggerProvider.cs" />
+    <Compile Include="Swagger\RockV2XmlCommentsTextHelper.cs" />
     <Compile Include="Swagger\SwaggerConfigV2.cs" />
     <Compile Include="Utility\ExcludeNavigationPropertiesContractResolver.cs" />
     <Compile Include="ProducesResponseTypeAttribute.cs" />
