--- a/Rock.CodeGeneration/Rock.CodeGeneration.csproj
+++ b/Rock.CodeGeneration/Rock.CodeGeneration.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\EntityColumn.cs" />
     <Compile Include="Utility\GeneratedFileSaveState.cs" />
+    <Compile Include="Utility\IndentedStringBuilder.cs" />
     <Compile Include="Utility\RockGuidCodeGenerator.cs" />
     <Compile Include="Utility\AlertType.cs" />
     <Compile Include="Utility\BindingBase.cs" />
