--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -112,6 +112,10 @@
     <Compile Include="Migrations\202501082033192_TempAddRestMetadata.Designer.cs">
       <DependentUpon>202501082033192_TempAddRestMetadata.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202501082124369_TempUpdateRestV2SecurityActions.cs" />
+    <Compile Include="Migrations\202501082124369_TempUpdateRestV2SecurityActions.Designer.cs">
+      <DependentUpon>202501082124369_TempUpdateRestV2SecurityActions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2417,6 +2421,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202501082033192_TempAddRestMetadata.resx">
       <DependentUpon>202501082033192_TempAddRestMetadata.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202501082124369_TempUpdateRestV2SecurityActions.resx">
+      <DependentUpon>202501082124369_TempUpdateRestV2SecurityActions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
