--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1275,19 +1275,71 @@
     <Compile Include="Jobs\PostUpdateJobs\PostV17UpdateHistoryTableEntityTypeIdIndexPostMigration.cs" />
     <Compile Include="Jobs\PostUpdateJobs\PostV17UpdatePersonPrimaryAliasGuid.cs" />
     <Compile Include="Jobs\UpdateProgramCompletions.cs" />
+    <Compile Include="Model\CMS\AdaptiveMessageAdaptationSegment\AdaptiveMessageAdaptationSegment.Logic.cs" />
+    <Compile Include="Model\CMS\ContentChannelItemAssociation\ContentChannelItemAssociation.Logic.cs" />
+    <Compile Include="Model\CMS\ContentChannelItemSlug\ContentChannelItemSlug.Logic.cs" />
+    <Compile Include="Model\CMS\HtmlContent\HtmlContent.Logic.cs" />
+    <Compile Include="Model\CMS\MediaFolder\MediaFolder.Logic.cs" />
+    <Compile Include="Model\CMS\PageRoute\PageRoute.Logic.cs" />
+    <Compile Include="Model\Communication\CommunicationAttachment\CommunicationAttachment.Logic.cs" />
+    <Compile Include="Model\Communication\CommunicationResponseAttachment\CommunicationResponseAttachment.Logic.cs" />
+    <Compile Include="Model\Communication\CommunicationTemplateAttachment\CommunicationTemplateAttachment.Logic.cs" />
+    <Compile Include="Model\Communication\NotificationRecipient\NotificationRecipient.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionActivityType\ConnectionActivityType.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionOpportunityCampus\ConnectionOpportunityCampus.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionOpportunityConnectorGroup\ConnectionOpportunityConnectorGroup.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionOpportunityGroupConfig\ConnectionOpportunityGroupConfig.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionOpportunityGroup\ConnectionOpportunityGroup.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionRequestActivity\ConnectionRequestActivity.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionRequestWorkflow\ConnectionRequestWorkflow.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionStatusAutomation\ConnectionStatusAutomation.Logic.cs" />
+    <Compile Include="Model\Connection\ConnectionStatus\ConnectionStatus.Logic.cs" />
     <Compile Include="Model\Core\AttributeMatrixItem\AttributeMatrixItem.SaveHook.cs" />
+    <Compile Include="Model\Core\AttributeMatrix\AttributeMatrix.Logic.cs" />
+    <Compile Include="Model\Core\CampusTopic\CampusTopic.Logic.cs" />
+    <Compile Include="Model\Core\FollowingEventNotification\FollowingEventNotification.Logic.cs" />
+    <Compile Include="Model\Core\FollowingEventSubscription\FollowingEventSubscription.Logic.cs" />
+    <Compile Include="Model\Core\FollowingSuggested\FollowingSuggested.Logic.cs" />
+    <Compile Include="Model\Core\NoteAttachment\NoteAttachment.Logic.cs" />
     <Compile Include="Model\Core\Note\NoteExtensionMethods.cs" />
+    <Compile Include="Model\CRM\Assessment\Assessment.Logic.cs" />
+    <Compile Include="Model\Engagement\StepProgramCompletion\StepProgramCompletion.Logic.cs" />
+    <Compile Include="Model\Engagement\StepTypePrerequisite\StepTypePrerequisite.Logic.cs" />
+    <Compile Include="Model\Engagement\StepWorkflow\StepWorkflow.Logic.cs" />
+    <Compile Include="Model\Event\EventItemAudience\EventItemAudience.Logic.cs" />
+    <Compile Include="Model\Event\EventItemOccurrenceChannelItem\EventItemOccurrenceChannelItem.Logic.cs" />
+    <Compile Include="Model\Event\InteractiveExperienceAction\InteractiveExperienceAction.Logic.cs" />
+    <Compile Include="Model\Event\InteractiveExperienceAnswer\InteractiveExperienceAnswer.Logic.cs" />
+    <Compile Include="Model\Event\InteractiveExperienceScheduleCampus\InteractiveExperienceScheduleCampus.Logic.cs" />
+    <Compile Include="Model\Event\RegistrationSession\RegistrationSession.Logic.cs" />
+    <Compile Include="Model\Event\RegistrationTemplateFee\RegistrationTemplateFee.Logic.cs" />
+    <Compile Include="Model\Event\RegistrationTemplateForm\RegistrationTemplateForm.Logic.cs" />
     <Compile Include="Model\Event\Registration\Registration.SaveHook.cs" />
+    <Compile Include="Model\Finance\BenevolenceRequestDocument\BenevolenceRequestDocument.Logic.cs" />
+    <Compile Include="Model\Finance\BenevolenceResult\BenevolenceResult.Logic.cs" />
+    <Compile Include="Model\Group\GroupDemographicType\GroupDemographicType.Logic.cs" />
+    <Compile Include="Model\Group\GroupDemographicValue\GroupDemographicValue.Logic.cs" />
+    <Compile Include="Model\Group\GroupMemberAssignment\GroupMemberAssignment.Logic.cs" />
+    <Compile Include="Model\Group\GroupMemberScheduleTemplate\GroupMemberScheduleTemplate.Logic.cs" />
+    <Compile Include="Model\Group\GroupScheduleExclusion\GroupScheduleExclusion.Logic.cs" />
+    <Compile Include="Model\Group\GroupSync\GroupSync.Logic.cs" />
     <Compile Include="Model\LMS\LearningActivityCompletion\LearningActivityCompletion.SaveHook.cs" />
+    <Compile Include="Model\LMS\LearningClassAnnouncement\LearningClassAnnouncement.Logic.cs" />
     <Compile Include="Model\LMS\LearningClassAnnouncement\LearningClassAnnouncementService.cs" />
+    <Compile Include="Model\LMS\LearningClassContentPage\LearningClassContentPage.Logic.cs" />
+    <Compile Include="Model\LMS\LearningCourseRequirement\LearningCourseRequirement.Logic.cs" />
     <Compile Include="Model\LMS\LearningCourse\LearningCourse.Logic.cs" />
     <Compile Include="Model\LMS\LearningCourse\LearningCourse.SaveHook.cs" />
+    <Compile Include="Model\LMS\LearningGradingSystemScale\LearningGradingSystemScale.Logic.cs" />
     <Compile Include="Model\LMS\LearningGradingSystemScale\LearningGradingSystemScaleService.cs" />
     <Compile Include="Model\LMS\LearningParticipant\LearningParticipant.Logic.cs" />
     <Compile Include="Model\LMS\LearningParticipant\LearningParticipantExtensionMethods.cs" />
     <Compile Include="Model\LMS\LearningProgramCompletion\LearningProgramCompletion.Logic.cs" />
     <Compile Include="Model\LMS\LearningSemester\LearningSemester.Logic.cs" />
     <Compile Include="Model\Prayer\PrayerRequest\PrayerRequest.SaveHook.cs" />
+    <Compile Include="Model\Reporting\MetricPartition\MetricPartition.Logic.cs" />
+    <Compile Include="Model\Reporting\MetricValuePartition\MetricValuePartition.Logic.cs" />
+    <Compile Include="Model\Reporting\ReportField\ReportField.Logic.cs" />
     <Compile Include="Net\Geolocation\IpGeoException.cs" />
     <Compile Include="Net\Geolocation\IpGeolocation.cs" />
     <Compile Include="Net\Geolocation\IpGeoLookup.cs" />
