--- a/Rock.Rest/Rock.Rest.csproj
+++ b/Rock.Rest/Rock.Rest.csproj
@@ -209,7 +209,7 @@
     <Compile Include="Handler\RockHttpControllerSelector.cs" />
     <Compile Include="Handler\ServiceScopeHandler.cs" />
     <Compile Include="HttpRequestMessageWrapper.cs" />
-    <Compile Include="RestApiHelper.cs" />
+    <Compile Include="CrudEndpointHelper.cs" />
     <Compile Include="Swagger\RockV2DocumentFilter.cs" />
     <Compile Include="Swagger\RockV2OperationFilter.cs" />
     <Compile Include="Swagger\RockV2SchemaFilter.cs" />
