--- a/Rock.Rest/Rock.Rest.csproj
+++ b/Rock.Rest/Rock.Rest.csproj
@@ -510,6 +510,7 @@
     <Compile Include="v2\Models\CodeGenerated\WorkflowTriggersController.CodeGenerated.cs" />
     <Compile Include="v2\Models\CodeGenerated\WorkflowTypesController.CodeGenerated.cs" />
     <Compile Include="v2\Models\DataViewsActionsController.cs" />
+    <Compile Include="v2\Models\EventItemsController.cs" />
     <Compile Include="v2\Models\FollowingsActionsController.cs" />
     <Compile Include="v2\Models\WorkflowsActionsController.cs" />
     <Compile Include="v2\TvController.cs" />
